fix: autodetect storage type (#264); fix: always re-create shares (#263)